@@ -473,12 +473,12 @@
 		  <property name="can_focus">True</property>
 		  <property name="climb_rate">1</property>
 		  <property name="digits">0</property>
-		  <property name="numeric">False</property>
+		  <property name="numeric">True</property>
 		  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
-		  <property name="snap_to_ticks">False</property>
+		  <property name="snap_to_ticks">True</property>
 		  <property name="wrap">False</property>
 		  <property name="adjustment">2100 1 65536 1 10 10</property>
-		  <signal name="changed" handler="update_preferences_information" last_modification_time="Sun, 18 Jan 2004 21:20:33 GMT"/>
+		  <signal name="value_changed" handler="update_preferences_information" last_modification_time="Sun, 16 May 2004 23:41:53 GMT"/>
 		</widget>
 		<packing>
 		  <property name="left_attach">1</property>
